Added installation instructions

--- a/RegImpute_notebook.ipynb
+++ b/RegImpute_notebook.ipynb
@@ -18,6 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Installation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sudo pip install RegImpute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Use Case:"
    ]
   },
